--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/osm-history" # the subpath of your site, e.g. /blog/
-url: "rsoden.github.io" # the base hostname & protocol for your site
-twitter_username: rsoden
-github_username:  rsoden
+url: "mikelmaron.github.io" # the base hostname & protocol for your site
+twitter_username: mikel
+github_username:  mikelmaron
 
 # Build settings
 markdown: kramdown
